Simple Ai Agent with AutoGen

--- a/Autogen Basics/First_Autogen_Agent.ipynb
+++ b/Autogen Basics/First_Autogen_Agent.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "364b46ed",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,76 @@
   {
    "cell_type": "markdown",
    "id": "7c69d586",
+   "metadata": {},
+   "source": [
+    "### Connecting to the Model\n",
+    "We use **OpenAIChatCompletionClient** to link our agent to GPT-4.  \n",
+    "In v0.4 this replaces the older **llm-config** approach."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1a311792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelClient = OpenAIChatCompletionClient(model='gpt-3.5-turbo', api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a18e05fe",
+   "metadata": {},
+   "source": [
+    "### Building the Agent\n",
+    "The **AssistantAgent** is a conversational AI that can respond to tasks. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3dba012e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assistant = AssistantAgent(name = 'assist', model_client=modelClient)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4716fa",
+   "metadata": {},
+   "source": [
+    "### Testing the Agent\n",
+    "We'll use the **run** method for getting a response (a simple way in v0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55c6cc2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = await assistant.run(task=\"Tell me a fact about Arsenal FC\")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c1417c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(result.messages[-1].content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bcdadd1",
    "metadata": {},
    "source": []
   }
